Globals Brands Groups

--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -1,6 +1,11 @@
 twig:
     default_path: '%kernel.project_dir%/templates'
 
+    globals:
+        gbrands: '@App\Globals\Brands'
+        ggroups: '@App\Globals\Groups'
+
+
 when@test:
     twig:
         strict_variables: true
